--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: html(titleName='Cotact')">
+<head th:replace="fragments/header.html :: html(titleName='Contact')">
 
 </head>
 <body class="d-flex flex-column">
@@ -11,7 +11,7 @@
 		<h2 class="fs-1 text-center my-5" style="font-weight: bold;">Contact</h2>
 
 		<div class="row-fluid flex-grow-1">
-			<table class="col-10 offset-1 col-lg-6 offset-lg-3 loginForm">
+			<table class="col-10 offset-1 col-lg-6 offset-lg-3 loginForm p-5">
 				<tr class="font-left py-2">
 					<td class="px-4 py-3">Phone number:</td>
 					<td class="px-4 py-3">123456789</td>
@@ -21,7 +21,7 @@
 					<td class="px-4 py-3">Example@mail.pl</td>
 				</tr>
 				<tr class="font-left">
-					<td class="px-4 py-3">Secon E-mail:</td>
+					<td class="px-4 py-3">Second e-mail:</td>
 					<td class="px-4 py-3">Example2@gmail.pl</td>
 				</tr>
 			</table>
